--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bd_node",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -15,5 +14,6 @@
     "express": "4.18.2",
     "mysql2": "3.4.5",
     "nodemon": "2.0.22"
-  }
+  },
+  "description": ""
 }
