--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mysql2": "3.4.5",
     "nodemon": "2.0.22"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.2"
+  }
 }
